--- a/Typing Game/style.css
+++ b/Typing Game/style.css
@@ -55,7 +55,7 @@ button:focus {
   transition: tranform 0.3s ease-in-out;
 }
 
-.setting-hide {
+.settings.hide {
   transform: translateY(-100%);
 }
 
