--- a/Text Reader/style.css
+++ b/Text Reader/style.css
@@ -1,6 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Lato") * {
-  box-sizing: border-box;
-}
+@import url("http://fonts.googleapis.com/css?family=Lato");
 
 * {
   box-sizing: border-box;
@@ -59,6 +57,10 @@ select:focus {
   padding: 20px;
   border-radius: 5px;
   transition: all 1s ease-in-out;
+}
+
+.text-box.show {
+  transform: translate(-50%, 0);
 }
 
 .text-box select {
